# termdown

./: .gitattributes  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  README_CN.md  TEST_PLAN.md  TODO.md  config.example.toml  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ITERM2_KITTY_RESPONSE_LEAK.md  LINK_PICKER_DESIGN.md  MARKDOWN_FEATURE_COVERAGE.md  RESEARCH.md  TERMINAL_PROTOCOLS.md  TUI_MODE_DEBUG_LOG.md  TUI_MODE_DESIGN.md  TUI_MODE_PLAN.md  TUI_MODE_RESEARCH.md
docs/adr/: 0001-metadata-block-handling.md
fixtures/: emoji-test.md  full-syntax-zh.md  full-syntax.md  headings.md  supported-syntax.md  tasklist.md  toc-test.md  unsupported-syntax.md
fixtures/expected/: emoji-test.ansi  full-syntax-zh.ansi  full-syntax.ansi  supported-syntax.ansi  tasklist.ansi  unsupported-syntax.ansi
fixtures/expected/specialized/: metadata-malformed.ansi  metadata-none.ansi  metadata-toml.ansi  metadata-yaml.ansi
fixtures/links/: a.md  index.md
fixtures/links/sub/: b.md
fixtures/specialized/: headings-emoji.md  large.md  metadata-malformed.md  metadata-none.md  metadata-toml.md  metadata-yaml.md
scripts/: gen-large-fixture.sh
src/: cat.rs  config.rs  font.rs  frontmatter.rs  layout.rs  main.rs  markdown.rs  render.rs  style.rs  theme.rs
src/tui/: input.rs  kitty.rs  mod.rs  search.rs  viewport.rs
tests/: cli.rs  headings.rs  snapshots.rs
tests/common/: mod.rs
